fix spacing of arrows on sidebar nav

--- a/wp-content/themes/our-new-tenet/style.css
+++ b/wp-content/themes/our-new-tenet/style.css
@@ -406,13 +406,13 @@ li.menu-item {
 .menu-side-nav-container li.menu-item a:hover {
   color: #3c3c39;
   font-weight: normal;
-  background: url(images/toggle-rt-sm-orange.png) no-repeat 182px 13px;
+  background: url(images/toggle-rt-sm-orange.png) no-repeat 172px 14px;
 }
 
 .menu-side-nav-container li.menu-item.current-menu-item a {
   color: #3c3c39;
   font-weight: normal;
-  background: url(images/toggle-rt-sm-orange.png) no-repeat 182px 13px;
+  background: url(images/toggle-rt-sm-orange.png) no-repeat 172px 14px;
 }
 
 /* Slider styling */
